# manga-yaku

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
backend-python/: .env.example  README.md  __init__.py  app.py  config.py  pyproject.toml  pyrightconfig.json  settings.py
backend-python/api/: errors.py
backend-python/api/routers/: __init__.py  agent.py  box_detection.py  boxes.py  images.py  jobs.py  jobs_creation_service.py  jobs_service.py  jobs_workflow_helpers.py  logs.py  ocr.py  settings.py  training.py  translation.py  volumes.py  volumes_memory.py  volumes_memory_service.py  volumes_sync.py
backend-python/api/schemas/: __init__.py  agent.py  agent_chat.py  jobs.py  (+7 more)
backend-python/core/: README.md  __init__.py
backend-python/infra/: README.md  __init__.py  domain_bindings.py  http.py  prompts.py  text_utils.py
backend-python/mcp_server/: README.md  __init__.py  context.py  http_app.py  server.py  tools.py
backend-python/tests/: README.md  __init__.py  conftest.py  test_agent_page_translate_helpers.py  test_agent_state_machine.py  test_agent_workflow_helpers.py  test_agent_workflow_stages.py  test_api_smoke.py  test_domain_page_ports.py  test_import_smoke.py  test_jobs_infra.py  test_jobs_runtime.py  test_jobs_service.py  test_jobs_worker_repo_adapters.py  test_ocr_execution.py  test_ocr_providers.py  test_retry_policies.py  test_translate_box_workflow.py  test_translation_execution.py  test_volumes_memory_service.py
(+513 files in other folders)
